# rules_lean4

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md
.github/workflows/: ci.yml
docs/: BUILD.bazel
e2e/: BUILD.bazel  MODULE.bazel  Main.lean
examples/aeneas/: BUILD.bazel  MODULE.bazel  Verify.lean
examples/mathlib/: BUILD.bazel  MODULE.bazel  Verify.lean
integration/: .bazelrc  MODULE.bazel
integration/tests/: BUILD.bazel
integration/tests/analysis/: BUILD.bazel  analysis_test.bzl  base.lean  ffi.lean  left.lean  right.lean  top.lean  z.c
integration/tests/dep/: BUILD.bazel  Main.lean
integration/tests/exe/: Main.lean
integration/tests/ffi/: BUILD.bazel  FFI.lean  add.c
integration/tests/git_dep/: Main.lean
integration/tests/lake_toml/: lake-manifest.json
integration/tests/lib_dep/: BUILD.bazel
integration/tests/lib_dep/Demo/: App.lean  Core.lean  Extra.lean
integration/tests/multi/: BUILD.bazel  Left.lean  Right.lean
integration/tests/negative/: BadProof.lean  MissingImport.lean  expect_failures.sh
integration/tests/proof/: Proof.lean
integration/tests/reverse_ffi/: BUILD.bazel  Square.lean  main.cpp
lean/: BUILD.bazel  defs.bzl  deps.bzl  distributions.bzl  extensions.bzl  providers.bzl  repositories.bzl  toolchain.bzl
lean/private/: BUILD.bazel  actions.bzl  binary.bzl  cc_binary.bzl  cc_headers.bzl  elaborate.lean  import.bzl  lakefile.bzl  library.bzl  link.lean
tests/: golden_check.sh
tests/analysis/: analysis_test.bzl
tests/dep/: lake-manifest.json
tests/exe/: BUILD.bazel
tests/git_dep/: BUILD.bazel  Main.lean
tests/lake_toml/: BUILD.bazel  Main.lean  lake-manifest.json
tests/multi/: Base.lean  Main.lean
tests/negative/: BUILD.bazel  UndefinedExtern.lean
tests/proof/: BUILD.bazel
tests/unit/: BUILD.bazel  unit_test.bzl
