"""rules_lean4 — Bazel rules for building Lean 4 projects with a hermetic toolchain."""

module(
    name = "rules_lean4",
    version = "0.1.0",
    bazel_compatibility = [">=9.0.0"],  # loads CcInfo/cc_common from rules_cc (moved out of globals in 9.x)
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.2.12")  # first with the Bazel-9 cc_common compatibility proxy

# This module registers NO Lean toolchain. The toolchain version is the consumer's single choice, set
# in their own root MODULE.bazel (see the README). rules_lean4's own toolchain-using tests live in the
# `integration/` consumer workspace and run via the `//:integration_test` bazel_integration_test
# target below, so this module stays a pure ruleset — nothing here leaks a toolchain to consumers.

bazel_dep(name = "stardoc", version = "0.8.0", dev_dependency = True)  # API doc generation (//docs)

# A hermetic C++ toolchain for building stardoc's renderer (//docs:api). This is a CC toolchain only
# (NOT a Lean toolchain) and dev-only, so it neither leaks to consumers nor pins a Lean version; it
# just lets the docs build without depending on a host C compiler + headers.
bazel_dep(name = "toolchains_llvm", version = "1.8.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "19.1.0")
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# Run the toolchain-using test suite as a nested-Bazel consumer workspace (integration/).
bazel_dep(name = "rules_bazel_integration_test", version = "0.37.1", dev_dependency = True)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries")
