load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_lean4//lean:defs.bzl", "lean_library")

# Elaborate Aeneas-importing Lean against the assembled stack (mathlib + Aeneas, both as oleans from
# @aeneas//:Aeneas). Building this checks the file.
lean_library(
    name = "verify",
    srcs = ["Verify.lean"],
    deps = ["@aeneas//:Aeneas"],
)

build_test(
    name = "verify_build_test",
    targets = [":verify"],
)
