"""Example: verify Rust code in Lean via Aeneas.

Aeneas (https://github.com/AeneasVerif/aeneas) translates Rust to Lean; its generated `.lean` files
import the `Aeneas` support library, which is built on mathlib. This module assembles that whole
stack through rules_lean4:

  * `lean_lake_cache` clones aeneas, runs `lake exe cache get` to pull mathlib + its deps as prebuilt
    oleans, then `lake build`s Aeneas/AeneasMeta from source on top — exposing the lot as
    `@aeneas//:Aeneas`.
  * a `lean_library` then elaborates Aeneas-generated Lean (checking it).

Aeneas pins a Lean release candidate (leanprover/lean4:v4.30.0-rc2), so this module selects that
toolchain. Heavy and network-bound (mathlib's cache is several GB and Aeneas builds from source), so
it lives outside the root suite. Run from this directory: `bazel test //...`.
"""

module(
    name = "lean_aeneas_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_lean4", version = "0.1.0")
local_path_override(
    module_name = "rules_lean4",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")  # build_test

lean = use_extension("@rules_lean4//lean:extensions.bzl", "lean")
lean.toolchain(version = "4.30.0-rc2")  # aeneas pins leanprover/lean4:v4.30.0-rc2
use_repo(lean, "lean_toolchains")

register_toolchains("@lean_toolchains//:all")

# Aeneas's Lean backend: mathlib + deps via `lake exe cache get`, then Aeneas built from source.
aeneas = use_repo_rule("@rules_lean4//lean:deps.bzl", "lean_lake_cache")

aeneas(
    name = "aeneas",
    timeout = 3600,
    build_targets = [
        "Aeneas",
        "AeneasMeta",
    ],
    commit = "8dd8bfb3047ce9797fa08d8046d8410a3b6a21c4",
    lib_name = "Aeneas",
    remote = "https://github.com/AeneasVerif/aeneas",
    sub_dir = "backends/lean",
)
