package(default_visibility = ["//lean:__subpackages__"])

# Orchestration scripts, written in Lean and run via the toolchain's own `lean --run`.
exports_files([
    "elaborate.lean",
    "link.lean",
])

filegroup(
    name = "bzl_files",
    srcs = glob(["*.bzl"]),
)

# Every source file in this package, for staging rules_lean4 into the integration test's sandbox.
filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
