load("@rules_lean4//lean:defs.bzl", "lean_binary", "lean_library", "lean_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Example: split a library into its own target and depend on it across the target boundary — the
# normal way to get finer caching than one big lean_library. `:core` provides module `Demo.Core`;
# the dependent target's own module `Demo.Extra` shares the `Demo` namespace prefix and imports it,
# so the dependency's olean tree must be searched even though `Demo.Extra` lands in this target's own
# tree. (Regression test for cross-target imports under a shared module prefix.)
lean_library(
    name = "core",
    srcs = ["Demo/Core.lean"],
)

lean_test(
    name = "lib_dep_test",
    size = "small",
    srcs = [
        "Demo/App.lean",
        "Demo/Extra.lean",
    ],
    deps = [":core"],
)

lean_binary(
    name = "app",
    srcs = [
        "Demo/App.lean",
        "Demo/Extra.lean",
    ],
    deps = [":core"],
)

# Golden: run the binary and assert its stdout.
sh_test(
    name = "lib_dep_stdout_test",
    size = "small",
    srcs = ["//tests:golden_check.sh"],
    args = [
        "$(rootpath :app)",
        "answer = 42, extra = 43",
    ],
    data = [":app"],
)
